feat: add arrayDiff method